<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="LargeText"
            android:textColor="#ff0000"
            app:layout_constraintBottom_toTopOf="@+id/tvPriority"
            app:layout_constraintEnd_toStartOf="@+id/tvPriority"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="403dp"
            android:layout_marginBottom="974dp"
            android:text="@string/Place"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEventName" />

        <EditText
            android:id="@+id/edPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/hintPlace"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintBottom_toTopOf="@+id/tvPriority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlace"
            app:layout_constraintVertical_bias="0.478" />

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="152dp"
            android:text="@string/tvPriority"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/dpDate"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgPriority" />

        <RadioGroup
            android:id="@+id/rgPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPriority">

            <RadioButton
                android:id="@+id/rbLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbLow" />

            <RadioButton
                android:id="@+id/rbNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbNormal" />

            <RadioButton
                android:id="@+id/rbHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbHigh" />

        </RadioGroup>

        <DatePicker
            android:id="@+id/dpTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:datePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TimePicker
            android:id="@+id/tpTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dpTime" />

        <Button
            android:id="@+id/btAccept"
            android:layout_width="215dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:text="@string/btAccept"
            app:layout_constraintEnd_toStartOf="@+id/btCancel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tpTime" />

        <Button
            android:id="@+id/btCancel"
            android:layout_width="206dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:text="@string/btCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btAccept"
            app:layout_constraintTop_toBottomOf="@+id/tpTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


